Fix table width to improve readability

--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -30,8 +30,9 @@ div.contents {
 table {
     border-collapse: collapse;
     font-size: 10pt;
-    margin-top: 1em;
-    margin-left: 2em;
+    margin: 0.7em 0;
+    width: 100%;
+    table-layout: auto;
 }
 table td {
     border: 1px solid var(--color-fg-200);
